--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body, html{
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,57 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 410px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.cell{
+  width:100px;
+  height: 100px;
+  border: 1px solid;
+  display:inline-block;
+  margin:0;
+  padding:0;
+  font-size: 8px;
+  vertical-align: top;
+  cursor: pointer;
+}
+
+.board :nth-child(1) div:last-child {
+  opacity: 0.4;
+}
+
+.row{
+  height: 102px;
+  margin:0;
+  padding:0;
+}
+
+.board{
+  padding: 20px 0;
+}
+
+.blackBg{
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 8px;
+}
+
+.mouseImage{
+ height: 100%; 
+}
+
+.button{
+  font-size:x-large;
+  padding:10px;
 }
